--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
+@import "./utils/breakpoints";
 @import "./utils/variables";
 @import "./utils/functions";
 @import "./utils/mixins";
@@ -10,7 +11,7 @@
 
 @import "./layout/header";
 @import "./layout/nav";
-@import "./layout/container"; 
+@import "./layout/container";
 @import "./layout/form";
 
 @import "./pages/work";
