--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,38 +1,66 @@
-@mixin heading-shadow($colour:lightness-shift($colour-primary), $offset: $heading-shadow-size){
-    text-shadow: $offset $offset $colour;
+@mixin heading-shadow(
+  $colour: lightness-shift($colour-primary),
+  $offset: $heading-shadow-size
+) {
+  text-shadow: $offset $offset $colour;
 }
 
-@mixin border($colour:$colour-primary) {
-    border: .1rem solid $colour;
+@mixin border($colour: $colour-primary) {
+  border: 0.1rem solid $colour;
 }
 
 @mixin img-ratio {
+  width: 100%;
+  display: block;
+  overflow: hidden;
+  padding-top: 56.25%;
+  position: relative;
+  & img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
     width: 100%;
-        display: block;
-        overflow: hidden;
-        padding-top: 56.25%;
-        position: relative;
-        & img {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 100%;
-            transform: translate(-50%, -50%);
-        }
+    transform: translate(-50%, -50%);
+  }
 }
 
 @mixin btn {
-    padding: $grid-gutter;
-    @include border;
-    color: $colour-primary;
-    background: $colour-secondary;
-    cursor: pointer;
-    &:hover{
-        background: $colour-primary;
-        color: $colour-accent;
-    }
-    &--full-width {
-        width: 100%;
-        margin: 0 auto;
-    }
+  padding: $grid-gutter;
+  @include border;
+  color: $colour-primary;
+  background: $colour-secondary;
+  cursor: pointer;
+  &:hover {
+    background: $colour-primary;
+    color: $colour-accent;
+  }
+  &--full-width {
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+
+// Breakpoints here
+@mixin mobile-only {
+  @media screen and (max-width: map-get($breakpoints, mobile)) {
+    @content;
+  }
+}
+
+@mixin tablet-only {
+  @media screen and (max-width: map-get($breakpoints, tablet)) {
+    @content;
+  }
+}
+
+@mixin dekstop-only {
+  @media screen and (max-width: map-get($breakpoints, dekstop)) {
+    @content;
+  }
+}
+
+@mixin LGdekstop-only {
+  @media screen and (max-width: map-get($breakpoints, LGdekstop)) {
+    @content;
+  }
 }
