--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -43,31 +43,31 @@
 // Breakpoints here
 // Utilisation ex: @include mobile-only { grid-template-columns: 1fr;}
 @mixin mobile-only {
-  @media screen and (min-width: map-get($breakpoints, mobile)) {
+  @media screen and (max-width: map-get($breakpoints, mobile)) {
     @content;
   }
 }
 // @include tablet-only { grid-template-columns: 1fr;}
 @mixin tablet-only {
-  @media screen and (min-width: map-get($breakpoints, tablet)) {
+  @media screen and (max-width: map-get($breakpoints, tablet)) {
     @content;
   }
 }
 // @include dekstop-only { grid-template-columns: 1fr;}
 @mixin dekstop-only {
-  @media screen and (min-width: map-get($breakpoints, dekstop)) {
+  @media screen and (max-width: map-get($breakpoints, dekstop)) {
     @content;
   }
 }
 // @include LGdekstop-only { grid-template-columns: 1fr;}
 @mixin LGdekstop-only {
-  @media screen and (min-width: map-get($breakpoints, LGdekstop)) {
+  @media screen and (max-width: map-get($breakpoints, LGdekstop)) {
     @content;
   }
 }
 
 @mixin XLdekstop-only {
-  @media screen and (min-width: map-get($breakpoints, XLdekstop)) {
+  @media screen and (max-width: map-get($breakpoints, XLdekstop)) {
     @content;
   }
 }
