--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,9 +8,10 @@
 @import "./base/typography";
 
 @import "./components/buttons";
+@import "./components/loading";
 
 @import "./layout/header";
-@import "./layout/nav"; 
+@import "./layout/nav";
 @import "./layout/container";
 @import "./layout/form";
 
