--- a/sass/components/_loading.scss
+++ b/sass/components/_loading.scss
@@ -1,5 +1,21 @@
-#loading {
+.loading {
   display: flex;
   justify-content: center;
+
+}
+.loading--full-hight {
   align-items: center;
+  position: fixed; /* or absolute */
+  top: 25%;
+  left: 50%;
+}
+.loading::after {
+  content: "";
+  width: 50px;
+  height: 50px;
+  border: 10px solid #6c51a4;
+  border-top-color: #2f435c;
+  border-radius: 25%;
+  transform: rotate(0.16turn);
+  animation: loading 1s ease infinite;
 }
