--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,9 +1,10 @@
-$colour-primary: #15DEA5;
+$colour-primary: #15dea5;
 $colour-secondary: #001534;
-$colour-accent: #D6FFF5;
+$colour-accent: #d6fff5;
 $colour-white: #fff;
-$colour-invalid: #DB464B;
+$colour-invalid: #db464b;
+$colour-background-mobile: white;
 
-$heading-shadow-size: .55rem;
+$heading-shadow-size: 0.55rem;
 $layout-margin: 6rem;
-$grid-gutter: $layout-margin * .25;
+$grid-gutter: $layout-margin * 0.25;
