--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -1,8 +1,19 @@
-@keyframes loading {
+@keyframes loading--spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes loading--exit {
+  from {
+    transform: scale(1);
+    opacity: 1;
+  }
+  to {
+    transform: scale(0);
+    opacity: 0;
   }
 }
