--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,14 +1,14 @@
 .header {
-    background: $colour-primary;
-    height: 10rem;
+  width: 100%;
+  height: 400px;
+  background: url(../../public/image/coffee-2242213_1920.jpg);
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  .wellcome {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    width: 100%;   
-    &__logo {
-        font-size: 7rem;
-        color: $colour-secondary;
-        margin-left: 10rem;
-        @include heading-shadow($colour-white);
-    }
+  }
 }
