--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 @import "./base/base";
 @import "./base/typography";
 
-@import "./components/buttons";
+@import "./components/hamburgerBtn";
 @import "./components/loading";
 
 @import "./layout/header";
