--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,14 +1,20 @@
-.header {
-  width: 100%;
-  height: 400px;
-  background: url(../../public/image/coffee-2242213_1920.jpg);
-  position: relative;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  .wellcome {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+.wrapper-logo {
+  height: 500px;
+  .header {
+    width: 100%;
+    height: 400px;
+    background: url(../../public/image/coffee-2242213_1920.jpg);
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: scroll;
+    .wellcome {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
   }
 }
