--- a/sass/components/_hamburgerBtn.scss
+++ b/sass/components/_hamburgerBtn.scss
@@ -2,5 +2,8 @@
   @include mobile-only {
     visibility: visible;
   }
-  @include hamburgerBtn;
+  @include hamburgerBtnFalse;
+}
+.opened {
+  @include hamburgerBtnTrue;
 }
