media queries better

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,7 +14,7 @@ html {
 body {
   box-sizing: border-box;
   background: $colour-secondary;
-  @include mobile-only {
+  @include media (mobile ) {
     background: $colour-background-mobile;
   }
 }
