--- a/sass/components/_hamburgerBtn.scss
+++ b/sass/components/_hamburgerBtn.scss
@@ -1,5 +1,5 @@
 .hamburger-toggle {
-  @include mobile-only {
+  @include media(mobile) {
     visibility: visible;
   }
   @include hamburgerBtnFalse;
