header better in line

--- a/sass/components/_hamburgerBtn.scss
+++ b/sass/components/_hamburgerBtn.scss
@@ -1,9 +1,12 @@
-.hamburger-toggle {
-  @include media(mobile) {
-    visibility: visible;
+.container-hamburger {
+  padding: 0;
+  .hamburger-toggle {
+    @include media(mobile) {
+      visibility: visible;
+    }
+    @include hamburgerBtnFalse;
   }
-  @include hamburgerBtnFalse;
-}
-.opened {
-  @include hamburgerBtnTrue;
+  .opened {
+    @include hamburgerBtnTrue;
+  }
 }
