--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,7 +3,7 @@
   .header {
     width: 100%;
     height: 400px;
-    background: url(../../public/image/coffee-2242213_1920.jpg);
+    background: url(../../public/image/coffee-header.jpg);
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
@@ -11,10 +11,21 @@
     background-attachment: scroll;
     .wellcome {
       display: flex;
-      flex-direction: row;
       align-items: center;
       flex-wrap: wrap;
       justify-content: space-between;
+      width: 90%;
+      position: relative;
+      margin: auto;
+      bottom: 10%;
+    }
+    .logo-container {
+      height: 200px;
+      text-align: center;
+    }
+    img {
+      height: 100%;
+      width: 100px;
     }
   }
 }
