--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,5 +1,16 @@
+.menu-open-mobile {
+  @include media(mobile) {
+    background-color: red;
+    height: 100%;
+    position: fixed;
+    z-index: -99;
+    width: 100%;
+    display: block;
+  }
+}
 .nav {
   @include media(mobile) {
     display: none;
   }
 }
+
