--- a/sass/components/_loading.scss
+++ b/sass/components/_loading.scss
@@ -16,7 +16,7 @@
         font-size: medium;
         font-weight: 900;
         align-items: center;
-        position: absolute;
+        position: fixed;
       }
     }
   }
@@ -39,7 +39,6 @@
     border-radius: 25%;
     transform: rotate(0.16turn);
     animation: loading--spin 1s ease infinite;
-    z-index: 99;
     @include media(mobile) {
       width: 70px;
       height: 70px;
@@ -56,7 +55,6 @@
   border-radius: 50%;
   transform: rotate(1turn);
   animation: loading--spin 0.3s ease infinite;
-  z-index: 99;
   @include media(mobile) {
     width: 60px;
     height: 60px;
