--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,11 +4,14 @@
     width: 100%;
     height: 400px;
     background: url(../../public/image/coffee-header.jpg);
+    // background-color: red;
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: scroll;
+    // position: relative;
+    // z-index: -99;
     .wellcome {
       display: flex;
       align-items: center;
