--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,11 +1,10 @@
-.menu-open-mobile {
+.nav-open {
   @include media(mobile) {
     background-color: red;
     height: 100%;
     position: fixed; 
-    z-index: -99;
     width: 100%;
-    display: block;
+    animation: nav--open 1s ease-in-out 0s 1 normal forwards;
   }
 }
 .nav {
