--- a/sass/components/_hamburgerBtn.scss
+++ b/sass/components/_hamburgerBtn.scss
@@ -3,6 +3,7 @@
   .hamburger-toggle {
     @include media(mobile) {
       visibility: visible;
+      z-index: 99;
     }
     @include hamburgerBtnFalse;
   }
