--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -26,9 +26,13 @@
       height: 200px;
       text-align: center;
     }
+    .header__logo{
+      z-index: 99;
+    }
     img {
       height: 100%;
       width: 100px;
+      z-index: 99;
     }
   }
 }
