--- a/public/css/style.css
+++ b/public/css/style.css
@@ -255,6 +255,10 @@ button {
   z-index: 99;
 }
 
+#navId {
+  display: none;
+}
+
 @media (max-width: 576px) {
   .nav-open {
     background-color: red;
@@ -265,9 +269,14 @@ button {
   }
 }
 
-.nav-close {
-  width: 0;
-  animation: nav--close 1s ease-in-out 0s 1 normal forwards;
+@media (max-width: 576px) {
+  .nav-close {
+    background-color: red;
+    height: 100%;
+    position: fixed;
+    width: 100%;
+    animation: nav--close 1s ease-in-out 0s 1 normal forwards;
+  }
 }
 
 @media (max-width: 576px) {
