--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,15 +1,17 @@
+#navId {
+  display: none;
+}
 .nav-open {
   @include media(mobile) {
-    background-color: red;
-    height: 100%;
-    position: fixed;
-    width: 100%;
+    @include navOpenClose;
     animation: nav--open 1s ease-in-out 0s 1 normal forwards;
   }
 }
 .nav-close {
-  width: 0;
-  animation: nav--close 1s ease-in-out 0s 1 normal forwards;
+  @include media(mobile) {
+    @include navOpenClose;
+    animation: nav--close 1s ease-in-out 0s 1 normal forwards;
+  }
 }
 .nav {
   @include media(mobile) {
