--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -6,6 +6,19 @@
     @include navOpenClose;
     animation: nav--open 1s ease-in-out 0s 1 normal forwards;
   }
+  .nav {
+    display: block;
+    padding: 7em 0px 0px 8%;
+    ul {
+      li {
+        list-style: none;
+        a {
+          color: white;
+          text-decoration: none;
+        }
+      }
+    }
+  }
 }
 .nav-close {
   @include media(mobile) {
