--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -12,6 +12,7 @@
     ul {
       li {
         list-style: none;
+        margin: 5px 0 0 0;
         a {
           color: white;
           text-decoration: none;
