--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -78,4 +78,18 @@
   height: 100%;
   position: fixed;
   width: 100%;
+  .nav {
+    display: block;
+    padding: 7em 0px 0px 8%;
+    ul {
+      li {
+        list-style: none;
+        margin: 5px 0 0 0;
+        a {
+          color: white;
+          text-decoration: none;
+        }
+      }
+    }
+  }
 }
