--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -80,8 +80,14 @@
   width: 100%;
   .nav {
     display: block;
-    padding: 7em 0px 0px 8%;
+    // padding: 7em 0px 0px 8%;
+    position: absolute;
+    top: 20%;
+    left: 5%;
+    width: 100%;
+    text-align: center;
     ul {
+      display: inline-block;
       li {
         list-style: none;
         margin: 5px 0 0 0;
