--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -40,3 +40,18 @@
     z-index: 1;
   }
 }
+
+@keyframes menu {
+  0% {
+    left: 100%;
+  }
+  50% {
+    left: 0%;
+  }
+  75%{
+    left: 30%;
+  }
+  100%{
+    left: 5.35%;
+  }
+}
