--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,6 +4,7 @@ $colour-accent: #d6fff5;
 $colour-white: #fff;
 $colour-invalid: #db464b;
 $colour-background-mobile: white;
+$colour-text-light: #362852;
 
 $heading-shadow-size: 0.55rem;
 $layout-margin: 6rem;
