--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,7 +4,10 @@ $colour-accent: #d6fff5;
 $colour-white: #fff;
 $colour-invalid: #db464b;
 $colour-background-mobile: white;
-$colour-text-light: #362852;
+$colour-text-light: #3bc1b0;
+$colour-text-active: white;
+$li-border-bottom: #7a7a7a;
+$bacground-link-active: #0078d4;
 
 $heading-shadow-size: 0.55rem;
 $layout-margin: 6rem;
