--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,6 +1,11 @@
 #navId {
   display: none;
 }
+.nav {
+  @include media(mobile) {
+    display: none;
+  }
+}
 .nav-open {
   @include media(mobile) {
     @include navOpenClose;
@@ -13,15 +18,10 @@
     animation: nav--close 1s ease-in-out 0s 1 normal forwards;
   }
 }
-.nav {
-  @include media(mobile) {
-    display: none;
-  }
-}
-
 .nav-animation {
   @include media(mobile) {
     @include navOpenClose;
-    animation: menu 1.9s cubic-bezier(0.61, 0.74, 0.8, 0.65) 0s 1 normal forwards;
+    animation: menu 1.9s cubic-bezier(0.61, 0.74, 0.8, 0.65) 0s 1 normal
+      forwards;
   }
 }
