--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -6,8 +6,9 @@ $colour-invalid: #db464b;
 $colour-background-mobile: white;
 $colour-text-light: #3bc1b0;
 $colour-text-active: white;
-$li-border-bottom: #7a7a7a;
-$bacground-link-active: #0078d4;
+$coulour-li-border-bottom: #7a7a7a;
+$coulour-bacground-link-active: #0078d4;
+$coulour-lang:#821B72;
 
 $heading-shadow-size: 0.55rem;
 $layout-margin: 6rem;
