--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -12,6 +12,10 @@
     animation: nav--open 1s ease-in-out 0s 1 normal forwards;
     @include navLinkDesign;
     @include drapeaulangue;
+    .fa-circle-half-stroke{
+      color: black;
+      margin: 0 5px 0px 0px;
+    }
   }
 }
 .nav-close {
